# Asterix-Node

./: .dockerignore  .gitignore  Dockerfile  README.md  celestialTestnet.json  celestial_testnet-raw.json  celestial_testnet.json  checksum.sha256  docker-compose.yml  testnet.json
data/bootnode2/chains/celestial_testnet/network/: secret_ed25519
data/bootnode2/chains/staging_testnet/network/: secret_ed25519
data/bootnode3/chains/celestial_testnet/network/: secret_ed25519
data/bootnode3/chains/staging_testnet/network/: secret_ed25519
node/cli/: Cargo.toml  build.rs
node/cli/res/: celestialTestnet.json
node/cli/src/: celestial_testnet-raw.json  chain_spec.rs  command.rs  service.rs
node/executor/: Cargo.toml
node/executor/benches/: bench.rs
node/executor/src/: lib.rs
node/executor/tests/: basic.rs  common.rs  fees.rs  submit_transaction.rs
node/runtime/: Cargo.toml
node/runtime/src/: constants.rs  impls.rs  lib.rs
pallets/template/: Cargo.toml
